k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: david-musumba
  labels:
    name: david-musumba
